# pid-ctl

./: CLAUDE.md  Cargo.toml  README.md  pid-ctl_plan.md
.beads/: .beads-credential-key  config.yaml  metadata.json
.githooks/: pre-commit
.github/workflows/: ci.yml
crates/pid-ctl/: Cargo.toml
crates/pid-ctl-core/: Cargo.toml
crates/pid-ctl-core/src/: filter.rs  lib.rs
crates/pid-ctl-core/tests/: requirements.rs
crates/pid-ctl-core/tests/req/: req_anti_windup.rs  req_config_validation.rs  req_controller_form.rs  req_core_step.rs  req_d_on_measurement.rs  req_deadband.rs  req_dt.rs  req_error_convention.rs  req_feedforward.rs  req_filter.rs  req_gains_runtime.rs  req_known_answer_vectors.rs  req_multi_step.rs  req_output_and_limits.rs  req_setpoint_ramp.rs  req_step_input_output.rs  support.rs
crates/pid-ctl-sim/: Cargo.toml
crates/pid-ctl-sim/src/: lib.rs  main.rs  persist.rs  plant.rs  state.rs
crates/pid-ctl-sim/tests/: cli.rs
crates/pid-ctl/src/: autotune.rs  cli.rs  json_events.rs  lib.rs  main.rs  schedule.rs  socket.rs  tune.rs
crates/pid-ctl/src/adapters/: mod.rs
crates/pid-ctl/src/app/: adapters_build.rs  defaults.rs  logger.rs  loop_runtime.rs  mod.rs  replay.rs  snapshot_persister.rs  socket_dispatch.rs  state_store.rs  ticker.rs
crates/pid-ctl/src/cli/: error.rs  mod.rs  output.rs  parse.rs  raw.rs  types.rs  user_set.rs
crates/pid-ctl/src/cmd/: cmd_autotune.rs  cmd_loop.rs  cmd_once.rs  cmd_pipe.rs  cmd_replay.rs  cmd_socket.rs  cmd_state.rs  mod.rs
crates/pid-ctl/src/tune/: export.rs  history.rs  input.rs  mod.rs  model.rs  render.rs  tests.rs
crates/pid-ctl/tests/: requirements.rs
crates/pid-ctl/tests/req/: helpers.rs  req_autotune.rs  req_cv_sink.rs  req_cv_write_policy.rs  req_dry_run.rs  req_fail_after.rs  req_feedforward.rs  req_flag_precedence.rs  req_flag_validation.rs  req_locking.rs  req_loop.rs  req_once_pipe.rs  req_pv_source.rs  req_pv_stdin_verify_cv.rs  req_reliability.rs  req_replay.rs  req_sim_loop.rs  req_socket.rs  req_state_commands.rs  req_state_schema.rs  req_state_write_interval.rs  req_stdout_contract.rs  req_tune.rs  req_tune_pty.rs
planning/: refactor-plan.md  test_patterns.md
