[workspace]
members = ["crates/pid-ctl-core", "crates/pid-ctl"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Shared versions — bump intentionally; see crates.io for latest.
proptest = "1.11.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
fs2 = "0.4.3"
ctrlc = "3"
wait-timeout = "0.2.1"
time = { version = "0.3.47", default-features = false, features = ["parsing", "formatting"] }
ratatui = "0.29"
crossterm = "0.28"
portable-pty = "0.9.0"
