[workspace]
members = ["crates/pid-ctl-core", "crates/pid-ctl", "crates/pid-ctl-sim"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.86"
repository = "https://github.com/aaroncohen/pid-ctl"
readme = "README.md"
keywords = ["pid", "control", "cli", "automation", "industrial"]
categories = ["command-line-utilities", "science::robotics"]

[workspace.dependencies]
# Shared versions — bump intentionally; see crates.io for latest.
proptest = "1.11.0"
serde = { version = "1.0.228", default-features = false, features = ["derive", "std"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
pretty_assertions = "1.4.1"
fs2 = "0.4.3"
ctrlc = "3"
nix = { version = "0.31.2", default-features = false, features = ["signal"] }
time = { version = "0.3.47", default-features = false, features = ["parsing", "formatting", "macros"] }
ratatui = "0.30"
crossterm = "0.29"
portable-pty = "0.9.0"
clap = { version = "4.6.0", features = ["derive", "std"] }
