[package]
name = "pid-ctl-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Deterministic PID control math for pid-ctl (see repository pid-ctl_plan.md)"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
