[package]
name = "pid-ctl-sim"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Simulated plants for pid-ctl loop / tuning experiments (thermal, fan, first-order)"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
