[package]
name = "pid-ctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "pid-ctl orchestration library and CLI (see repository pid-ctl_plan.md)"

[dependencies]
pid-ctl-core = { path = "../pid-ctl-core" }
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true
ctrlc.workspace = true
wait-timeout.workspace = true

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
