[package]
name = "pid-ctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "pid-ctl orchestration library and CLI (see repository pid-ctl_plan.md)"
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pid-ctl-core = { path = "../pid-ctl-core" }
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true
ctrlc.workspace = true
wait-timeout.workspace = true
time.workspace = true
ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm"]

[dev-dependencies]
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
pretty_assertions.workspace = true
portable-pty.workspace = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
